Bug 399085 - crash during snap package install
Summary: crash during snap package install
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Snap Backend (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR crash
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-09-25 23:28 UTC by Patrick Silva
Modified: 2018-10-05 15:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.14.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2018-09-25 23:28:15 UTC
I tried to install skype snap packge on neon dev unstable and discover crashed before to complete the process.

Application: Discover (plasma-discover), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f5b7523cc80 (LWP 24656))]

Thread 12 (Thread 0x7f5b1b7fe700 (LWP 17147)):
#0  0x00007f5b6ad62963 in g_private_get () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f5b6ad45370 in g_thread_self () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f5b6ad1d53d in g_main_context_iteration () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f5b710eda9b in QEventDispatcherGlib::processEvents (this=0x7f5b10003c00, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#4  0x00007f5b71091dea in QEventLoop::exec (this=this@entry=0x7f5b1b7fdda0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:214
#5  0x00007f5b70ebcb8a in QThread::exec (this=<optimized out>) at thread/qthread.cpp:525
#6  0x00007f5b70ec7aab in QThreadPrivate::start (arg=0x55a95ae23140) at thread/qthread_unix.cpp:367
#7  0x00007f5b6ceb86db in start_thread (arg=0x7f5b1b7fe700) at pthread_create.c:463
#8  0x00007f5b707ba88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 11 (Thread 0x7f5b2c315700 (LWP 12247)):
#0  0x00007f5b707adbf9 in __GI___poll (fds=0x7f5b2482b870, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f5b6ad1d439 in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f5b6ad1d54c in g_main_context_iteration () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f5b710eda9b in QEventDispatcherGlib::processEvents (this=0x7f5b24005020, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#4  0x00007f5b71091dea in QEventLoop::exec (this=this@entry=0x7f5b2c314da0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:214
#5  0x00007f5b70ebcb8a in QThread::exec (this=<optimized out>) at thread/qthread.cpp:525
#6  0x00007f5b70ec7aab in QThreadPrivate::start (arg=0x7f5b4400e520) at thread/qthread_unix.cpp:367
#7  0x00007f5b6ceb86db in start_thread (arg=0x7f5b2c315700) at pthread_create.c:463
#8  0x00007f5b707ba88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 10 (Thread 0x7f5b1bfff700 (LWP 1596)):
#0  0x00007f5b707adbf9 in __GI___poll (fds=0x55a95f8519c0, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f5b6ad1d439 in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f5b6ad1d54c in g_main_context_iteration () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f5b710eda9b in QEventDispatcherGlib::processEvents (this=0x7f5af8abf7b0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#4  0x00007f5b71091dea in QEventLoop::exec (this=this@entry=0x7f5b1bffeda0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:214
#5  0x00007f5b70ebcb8a in QThread::exec (this=<optimized out>) at thread/qthread.cpp:525
#6  0x00007f5b70ec7aab in QThreadPrivate::start (arg=0x55a95f5b4920) at thread/qthread_unix.cpp:367
#7  0x00007f5b6ceb86db in start_thread (arg=0x7f5b1bfff700) at pthread_create.c:463
#8  0x00007f5b707ba88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 9 (Thread 0x7f5b29af4700 (LWP 24689)):
#0  0x00007f5b6ad62d79 in g_mutex_lock () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f5b6ad1ce5c in g_main_context_check () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f5b6ad1d3e0 in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f5b6ad1d54c in g_main_context_iteration () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f5b710eda9b in QEventDispatcherGlib::processEvents (this=0x7f5b14000b20, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#5  0x00007f5b71091dea in QEventLoop::exec (this=this@entry=0x7f5b29af3da0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:214
#6  0x00007f5b70ebcb8a in QThread::exec (this=<optimized out>) at thread/qthread.cpp:525
#7  0x00007f5b70ec7aab in QThreadPrivate::start (arg=0x55a9574871d0) at thread/qthread_unix.cpp:367
#8  0x00007f5b6ceb86db in start_thread (arg=0x7f5b29af4700) at pthread_create.c:463
#9  0x00007f5b707ba88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 8 (Thread 0x7f5b2aedd700 (LWP 24670)):
#0  0x00007f5b707adbf9 in __GI___poll (fds=0x55a957542950, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f5b6ad1d439 in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f5b6ad1d7d2 in g_main_loop_run () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f5b3c94bf66 in ?? () from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#4  0x00007f5b6ad44e85 in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f5b6ceb86db in start_thread (arg=0x7f5b2aedd700) at pthread_create.c:463
#6  0x00007f5b707ba88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 7 (Thread 0x7f5b2b6de700 (LWP 24669)):
#0  0x00007f5b707adbf9 in __GI___poll (fds=0x55a9575251f0, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f5b6ad1d439 in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f5b6ad1d54c in g_main_context_iteration () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f5b6ad1d591 in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f5b6ad44e85 in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f5b6ceb86db in start_thread (arg=0x7f5b2b6de700) at pthread_create.c:463
#6  0x00007f5b707ba88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 6 (Thread 0x7f5b3eb04700 (LWP 24666)):
#0  0x00007f5b6ad62d79 in g_mutex_lock () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f5b6ad1c9a3 in g_main_context_prepare () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f5b6ad1d36b in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f5b6ad1d54c in g_main_context_iteration () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f5b710eda9b in QEventDispatcherGlib::processEvents (this=0x7f5b30000b20, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#5  0x00007f5b71091dea in QEventLoop::exec (this=this@entry=0x7f5b3eb03da0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:214
#6  0x00007f5b70ebcb8a in QThread::exec (this=<optimized out>) at thread/qthread.cpp:525
#7  0x00007f5b70ec7aab in QThreadPrivate::start (arg=0x55a958a0ecc0) at thread/qthread_unix.cpp:367
#8  0x00007f5b6ceb86db in start_thread (arg=0x7f5b3eb04700) at pthread_create.c:463
#9  0x00007f5b707ba88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 5 (Thread 0x7f5b40085700 (LWP 24665)):
#0  0x00007f5b707a90b4 in __GI___libc_read (fd=15, buf=0x7f5b40084b90, nbytes=16) at ../sysdeps/unix/sysv/linux/read.c:27
#1  0x00007f5b6ad61a00 in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f5b6ad1cf27 in g_main_context_check () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f5b6ad1d3e0 in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f5b6ad1d54c in g_main_context_iteration () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f5b710eda9b in QEventDispatcherGlib::processEvents (this=0x7f5b38000b20, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#6  0x00007f5b71091dea in QEventLoop::exec (this=this@entry=0x7f5b40084da0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:214
#7  0x00007f5b70ebcb8a in QThread::exec (this=<optimized out>) at thread/qthread.cpp:525
#8  0x00007f5b70ec7aab in QThreadPrivate::start (arg=0x55a95705b950) at thread/qthread_unix.cpp:367
#9  0x00007f5b6ceb86db in start_thread (arg=0x7f5b40085700) at pthread_create.c:463
#10 0x00007f5b707ba88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 4 (Thread 0x7f5b495d5700 (LWP 24664)):
#0  0x00007f5b707c9eca in __GI___clock_gettime (clock_id=clock_id@entry=1, tp=tp@entry=0x7f5b495d4aa0) at ../sysdeps/unix/clock_gettime.c:134
#1  0x00007f5b710ed3a1 in qt_clock_gettime (ts=0x7f5b495d4aa0, clock=<optimized out>) at kernel/qelapsedtimer_unix.cpp:111
#2  do_gettime (frac=<synthetic pointer>, sec=<synthetic pointer>) at kernel/qelapsedtimer_unix.cpp:166
#3  qt_gettime () at kernel/qelapsedtimer_unix.cpp:175
#4  0x00007f5b710ebbd9 in QTimerInfoList::updateCurrentTime (this=this@entry=0x7f5b44004cf0) at kernel/qtimerinfo_unix.cpp:91
#5  0x00007f5b710ec1b5 in QTimerInfoList::timerWait (this=0x7f5b44004cf0, tm=...) at kernel/qtimerinfo_unix.cpp:388
#6  0x00007f5b710ed7fe in timerSourcePrepareHelper (timeout=0x7f5b495d4b64, src=<optimized out>) at kernel/qeventdispatcher_glib.cpp:132
#7  timerSourcePrepare (source=<optimized out>, timeout=0x7f5b495d4b64) at kernel/qeventdispatcher_glib.cpp:165
#8  0x00007f5b6ad1c998 in g_main_context_prepare () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#9  0x00007f5b6ad1d36b in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#10 0x00007f5b6ad1d54c in g_main_context_iteration () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#11 0x00007f5b710eda9b in QEventDispatcherGlib::processEvents (this=0x7f5b44000b20, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#12 0x00007f5b71091dea in QEventLoop::exec (this=this@entry=0x7f5b495d4d30, flags=..., flags@entry=...) at kernel/qeventloop.cpp:214
#13 0x00007f5b70ebcb8a in QThread::exec (this=<optimized out>) at thread/qthread.cpp:525
#14 0x00007f5b742b8906 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#15 0x00007f5b70ec7aab in QThreadPrivate::start (arg=0x55a958828460) at thread/qthread_unix.cpp:367
#16 0x00007f5b6ceb86db in start_thread (arg=0x7f5b495d5700) at pthread_create.c:463
#17 0x00007f5b707ba88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 3 (Thread 0x7f5b58e79700 (LWP 24662)):
#0  update_get_addr (ti=0x7f5b71519670) at ../elf/dl-tls.c:804
#1  0x00007f5b7506fa28 in __tls_get_addr () at ../sysdeps/x86_64/tls_get_addr.S:55
#2  0x00007f5b70ec6a56 in get_thread_data () at thread/qthread_unix.cpp:184
#3  QThreadData::current (createIfNecessary=createIfNecessary@entry=true) at thread/qthread_unix.cpp:239
#4  0x00007f5b710ed99a in postEventSourcePrepare (s=0x7f5b4c0047a0, timeout=0x7f5b58e78bb4) at kernel/qeventdispatcher_glib.cpp:252
#5  0x00007f5b6ad1c998 in g_main_context_prepare () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#6  0x00007f5b6ad1d36b in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#7  0x00007f5b6ad1d54c in g_main_context_iteration () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#8  0x00007f5b710eda9b in QEventDispatcherGlib::processEvents (this=0x7f5b4c000b20, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#9  0x00007f5b71091dea in QEventLoop::exec (this=this@entry=0x7f5b58e78d80, flags=..., flags@entry=...) at kernel/qeventloop.cpp:214
#10 0x00007f5b70ebcb8a in QThread::exec (this=<optimized out>) at thread/qthread.cpp:525
#11 0x00007f5b71a618b5 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#12 0x00007f5b70ec7aab in QThreadPrivate::start (arg=0x55a9570318a0) at thread/qthread_unix.cpp:367
#13 0x00007f5b6ceb86db in start_thread (arg=0x7f5b58e79700) at pthread_create.c:463
#14 0x00007f5b707ba88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 2 (Thread 0x7f5b5a08a700 (LWP 24661)):
#0  0x00007f5b6ad62d94 in g_mutex_unlock () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f5b6ad1c988 in g_main_context_prepare () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f5b6ad1d36b in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f5b6ad1d54c in g_main_context_iteration () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f5b710eda9b in QEventDispatcherGlib::processEvents (this=0x7f5b54000b20, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#5  0x00007f5b71091dea in QEventLoop::exec (this=this@entry=0x7f5b5a089d70, flags=..., flags@entry=...) at kernel/qeventloop.cpp:214
#6  0x00007f5b70ebcb8a in QThread::exec (this=this@entry=0x7f5b73032d60 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at thread/qthread.cpp:525
#7  0x00007f5b72dbae45 in QDBusConnectionManager::run (this=0x7f5b73032d60 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at qdbusconnection.cpp:178
#8  0x00007f5b70ec7aab in QThreadPrivate::start (arg=0x7f5b73032d60 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at thread/qthread_unix.cpp:367
#9  0x00007f5b6ceb86db in start_thread (arg=0x7f5b5a08a700) at pthread_create.c:463
#10 0x00007f5b707ba88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 1 (Thread 0x7f5b7523cc80 (LWP 24656)):
[KCrash Handler]
#6  0x00007f5b3d0bf58b in qDeleteAll<QList<QObject*>::const_iterator> (end=..., begin=...) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qalgorithms.h:320
#7  qDeleteAll<QList<QObject*> > (c=...) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qalgorithms.h:328
#8  Channels::refreshChannels (this=0x55a95f464030) at ./libdiscover/backends/SnapBackend/SnapResource.cpp:410
#9  0x00007f5b710c2bef in QtPrivate::QSlotObjectBase::call (a=0x7fff932d0c30, r=0x55a95f464030, this=0x55a95fbd2d70) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:376
#10 QMetaObject::activate (sender=sender@entry=0x55a95c050f30, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x0) at kernel/qobject.cpp:3754
#11 0x00007f5b710c31a7 in QMetaObject::activate (sender=sender@entry=0x55a95c050f30, m=m@entry=0x7f5b3d2caca0 <SnapResource::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x0) at kernel/qobject.cpp:3633
#12 0x00007f5b3d0c4f33 in SnapResource::newSnap (this=this@entry=0x55a95c050f30) at ./obj-x86_64-linux-gnu/libdiscover/backends/SnapBackend/snap-backend_autogen/EWIEGA46WW/moc_SnapResource.cpp:210
#13 0x00007f5b3d0bc68b in SnapResource::setSnap (this=this@entry=0x55a95c050f30, snap=...) at ./libdiscover/backends/SnapBackend/SnapResource.cpp:239
#14 0x00007f5b3d0c3369 in ResultsStream* SnapBackend::populate<QSnapdListRequest>(QSnapdListRequest*)::{lambda()#2}::operator()() const (__closure=0x55a95e2cc790) at ./libdiscover/backends/SnapBackend/SnapBackend.cpp:142
#15 0x00007f5b710c2bef in QtPrivate::QSlotObjectBase::call (a=0x7fff932d0e00, r=0x55a95f673450, this=0x55a95e2cc780) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:376
#16 QMetaObject::activate (sender=0x55a95e5a5430, signalOffset=<optimized out>, local_signal_index=<optimized out>, argv=<optimized out>) at kernel/qobject.cpp:3754
#17 0x00007f5b3ce8ce7e in QSnapdRequest::finish(void*) () from /usr/lib/x86_64-linux-gnu/libsnapd-qt.so.1
#18 0x00007f5b3ce81dbd in QSnapdListRequest::handleResult(void*, void*) () from /usr/lib/x86_64-linux-gnu/libsnapd-qt.so.1
#19 0x00007f5b3cc31952 in ?? () from /usr/lib/x86_64-linux-gnu/libsnapd-glib.so.1
#20 0x00007f5b6ad1d0f5 in g_main_context_dispatch () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#21 0x00007f5b6ad1d4c0 in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#22 0x00007f5b6ad1d54c in g_main_context_iteration () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#23 0x00007f5b710eda7f in QEventDispatcherGlib::processEvents (this=0x55a956fc3430, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#24 0x00007f5b65826ed1 in QPAEventDispatcherGlib::processEvents (this=0x55a956fc3430, flags=...) at qeventdispatcher_glib.cpp:69
#25 0x00007f5b71091dea in QEventLoop::exec (this=this@entry=0x7fff932d10e0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:214
#26 0x00007f5b7109afa0 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1336
#27 0x000055a9560b2808 in main (argc=<optimized out>, argv=<optimized out>) at ./discover/main.cpp:156
Comment 1 Aleix Pol 2018-10-05 15:41:07 UTC
Git commit c8411ca8cfbbc4510e47bec674f4e4943b986ac0 by Aleix Pol.
Committed on 05/10/2018 at 15:40.
Pushed by apol into branch 'Plasma/5.14'.

snap: fix crash

clean deleted pointers

M  +1    -0    libdiscover/backends/SnapBackend/SnapResource.cpp

https://commits.kde.org/discover/c8411ca8cfbbc4510e47bec674f4e4943b986ac0