snap: fix crash

clean deleted pointers

BUG: 399085